k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: water
  namespace: water
spec:
  selector:
    app: water
  ports:
    - port: 80
      targetPort: 8000
