k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water
  namespace: water
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: water.ingress.realmclick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: water
                port:
                  number: 80
  tls:
    - hosts:
        - water.ingress.realmclick.com
      secretName: water-tls
